# genai_flutter

./: pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: embedding_model.cpp  embedding_model.h  genai_bridge.cpp  genai_bridge.h  sqlite_wrapper.h  vector_db.cpp  vector_db.h
android/src/main/cpp/include/: sqlite3.h
android/src/main/java/com/genai/flutter/: GenaiFlutterPlugin.java
example/: README.md  pubspec.yaml
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/genai_flutter_example/: MainActivity.kt
example/lib/: main.dart
example/test/: widget_test.dart
lib/: genai_flutter.dart  genai_flutter_method_channel.dart  genai_flutter_platform_interface.dart
lib/src/: genai_service.dart  model_manager.dart
test/: genai_flutter_method_channel_test.dart  genai_flutter_test.dart
